# S-P-A

./: .gitignore  README.md
.github/workflows/: cmake.yml
Team07/Code07/: CMakeLists.txt  Contact.csv
Team07/Code07/src/integration_testing/: CMakeLists.txt
Team07/Code07/src/integration_testing/src/: TestSourceProcessorToPkb.cpp  TestTokenizer.cpp
Team07/Code07/src/integration_testing/src/PQL/PQLEvaluator/: TestAffects.cpp  TestAffectsBip.cpp  TestAffectsT.cpp  TestBasicStatements.cpp  TestCalls.cpp  TestFollows.cpp  TestModifies.cpp  TestMultiClause.cpp  TestNext.cpp  TestNextBip.cpp  TestNextBipT.cpp  TestPatterns.cpp  TestUses.cpp
Team07/Code07/src/integration_testing/src/Utils/: TestUtils.cpp  TestUtils.h
Team07/Code07/src/spa/: CMakeLists.txt
Team07/Code07/src/spa/src/CFG/: CFG.cpp  CFG.h  CFGBip.cpp  CFGBip.h
Team07/Code07/src/spa/src/PKB/: BlockComponent.cpp  BlockComponent.h  CFGBipComponent.cpp  CFGBipComponent.h  CFGComponent.cpp  CFGComponent.h  CallComponent.cpp  CallComponent.h  FollowComponent.cpp  FollowComponent.h  ModifyComponent.cpp  ModifyComponent.h  NextComponent.cpp  NextComponent.h  PKB.cpp  PKB.h  PairHasher.h  ParentComponent.cpp  ParentComponent.h  PatternComponent.cpp  PatternComponent.h  UseComponent.cpp  UseComponent.h
Team07/Code07/src/spa/src/PQL/QueryEvaluator/: Argument.cpp  Argument.h  ArgumentType.h  ClauseResult.cpp  ClauseResult.h  PQLPattern.cpp  PQLPattern.h  PatternEvaluator.cpp  PatternEvaluator.h  PatternType.h  QueryEvaluator.cpp  QueryEvaluator.h  Row.cpp  Row.h  SuchEvaluator.cpp  SuchEvaluator.h  ValueStore.cpp  ValueStore.h  WithEvaluator.cpp  WithEvaluator.h
Team07/Code07/src/spa/src/PQL/QueryParser/: Clause.cpp  Clause.h  ClauseList.h  ClauseType.h  DesignEntityType.cpp  DesignEntityType.h  IrrelevantClauseProcessor.cpp  IrrelevantClauseProcessor.h  PatternClause.cpp  PatternClause.h  Query.cpp  Query.h  QueryParser.cpp  QueryParser.h  QuerySynonym.cpp  QuerySynonym.h  SuchThatClause.cpp  SuchThatClause.h  WithArgument.cpp  WithArgument.h  WithClause.cpp  WithClause.h  WithType.h
Team07/Code07/src/spa/src/PQL/QueryProjector/: QueryOutput.cpp  QueryOutput.h  QueryOutputType.h  QueryProjector.cpp  QueryProjector.h
Team07/Code07/src/spa/src/SourceProcessor/: DesignAbstractor.cpp  DesignAbstractor.h  PostFixConverter.cpp  PostFixConverter.h  SimpleParser.cpp  SimpleParser.h
Team07/Code07/src/spa/src/SourceProcessor/SourceProcessorUtil/: PkbPopulator.cpp  PkbPopulator.h  SourceProcessorUtils.cpp  SourceProcessorUtils.h
Team07/Code07/src/spa/src/Tokenizer/: RuleEngine.cpp  RuleEngine.h  Rules.cpp  Rules.h  Token.cpp  Token.h  TokenType.cpp  TokenType.h  Tokenizer.cpp  Tokenizer.h
Team07/Code07/src/spa/src/Utils/: Sort.h  string_utils.cpp  string_utils.h
Team07/Code07/src/unit_testing/: CMakeLists.txt
Team07/Code07/src/unit_testing/src/: TestSimpleParser.cpp
Team07/Code07/src/unit_testing/src/Utils/: TestSorting.cpp
Team07/Code07/src/unit_testing/src/pkb/: PKBTestCall.cpp  PKBTestCtrlVar.cpp  PKBTestFollow.cpp  PKBTestGeneral.cpp  PKBTestModify.cpp  PKBTestNext.cpp  PKBTestParent.cpp  PKBTestPattern.cpp  PKBTestUse.cpp
Team07/Code07/src/unit_testing/src/pql/: PQLUtil.cpp  PQLUtil.h  TestClauseResult.cpp  TestIrrelevantClauseProcessor.cpp  TestQuery.cpp  TestQueryEvaluator.cpp  TestQueryParser.cpp  TestQueryProjector.cpp  TestRow.cpp
Team07/Code07/src/unit_testing/src/tokenizer/: TestReMatch.cpp  TestRuleEngine.cpp  TestToken.cpp  TestTokenType.cpp
Team07/Tests07/: AllSymbols_queries.txt  Call_queries.txt  Call_source.txt  Complex_queries.txt  Complex_source.txt  FiveHundo_queries.txt  FiveHundo_source.txt  Generic_queries.txt  Generic_source.txt  HighComplexity_queries.txt  HighComplexity_source.txt  (+13 more)
(+60 files in other folders)
